Adding AI attempt 1

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script src="sketch.js"></script>
     <script src="player.js"></script>
     <script src="obstacles.js"></script>
+    <script src="matrix.js"></script>
+    <script src="nn.js"></script>
+    <script src="ga.js"></script>
   </head>-
   <body>
   </body>
